# hercode-hijacking

./: .gitignore  README.md  SUBMISSION.md
backend/: .dockerignore  .env.example  API.md  Dockerfile  README.md  alembic.ini  hijacking.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  errors.py  jobs.py  logging_config.py  main.py
backend/app/adapters/: __init__.py  base.py  configurable_listing.py  generic_jsonld.py  global_corroborating_source.py  global_retailer.py  swiss_retailer.py
backend/app/api/: contract.py  demo.py  discovery_runs.py  exports.py  health.py  opportunities.py  scan_items.py  source_sets.py
backend/app/config_data/: market_profile_ch.yaml  normalization.yaml  retailers.yaml  scoring.yaml  source_sets.yaml
backend/app/models/: __init__.py  _common.py  coverage_snapshot.py  discovery_run.py  normalized_signal.py  opportunity.py  raw_signal.py  recommendation.py  retailer.py  retailer_scan.py  scan_item.py  transferability.py
backend/app/schemas/: __init__.py  discovery.py  opportunity.py  recommendation.py  scan.py
backend/app/security/: __init__.py  rate_limit.py  ssrf.py  url_validation.py
backend/app/services/: __init__.py  clustering_service.py  collection_service.py  coverage_service.py  deduplication_service.py  discovery_service.py  export_service.py  extraction_service.py  normalization_service.py  opportunity_service.py  storage.py  (+6 more)
backend/hijacking_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+45 files in other folders)
