[project]
name = "hijacking-backend"
version = "0.1.0"
description = "Hijacking — Retail Opportunity Decision Engine backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Optional upgrades. The pipeline runs fully without these using pure-Python
# deterministic implementations (see app/services/clustering_service.py).
ml = ["scikit-learn>=1.4", "rapidfuzz>=3.6", "selectolax>=0.3"]
browser = ["playwright>=1.42"]
postgres = ["psycopg[binary]>=3.1"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
filterwarnings = ["ignore::DeprecationWarning"]
